--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -1,12 +1,14 @@
 services:
   server:
-    image: todo-backend
+    image: todo-backend-dev
     build:
       context: ./todo-backend
-      dockerfile: ./Dockerfile
+      dockerfile: ./dev.Dockerfile
+    volumes:
+      - ./todo-backend:/usr/src/app/
     ports:
       - 3000:3000
-    container_name: todo-backend
+    container_name: todo-backend-dev
     environment:
       MONGO_URL: "mongodb://the_username:the_password@mongo:27017/the_database"
       REDIS_URL: "//redis:6379"
@@ -35,19 +37,23 @@ services:
     volumes:
       - ./todo-backend/redis_data:/data
   app:
-    image: todo-frontend
+    image: todo-frontend-dev
     build:
       context: ./todo-frontend
-      dockerfile: ./Dockerfile
+      dockerfile: ./dev.Dockerfile
       args:
         REACT_APP_BACKEND_URL: "/api/"
+    volumes:
+      - ./todo-frontend/:/usr/src/app/
     ports:
-      - 5000:5000
-    container_name: todo-frontend
+      - 5000:3000
+    container_name: todo-frontend-dev
+  debug-helper:
+    image: busybox
   nginx:
     image: nginx:1.20.1
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./dev.nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
     container_name: reverse-proxy
