--- a/todo-app/todo-backend/Dockerfile
+++ b/todo-app/todo-backend/Dockerfile
@@ -2,9 +2,9 @@ FROM node:16@sha256:c33a8221330d87a2113fb6cdbb8fbb243592c62f89de923e9ef5bb8b627c
 
 ENV NODE_ENV production
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/backend
 
-COPY --chown=node:node . /usr/src/app/
+COPY --chown=node:node . .
 
 RUN npm ci --only-production
 
