--- a/my-app/frontend/package.json
+++ b/my-app/frontend/package.json
@@ -22,8 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint .",
-    "cypress:open": "cypress open"
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +55,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "cypress": "^8.3.1",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^24.4.0"
   }
